redis-insight.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-redis-insight
  name: redis-insight
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: deployment-redis-insight
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-redis-insight
  name: deployment-redis-insight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-redis-insight
  template:
    metadata:
      labels:
        app: deployment-redis-insight
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: pvc-redis-insight
      containers:
        - name:  redis-insight
          image: redislabs/redisinsight:1.12.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: db
            mountPath: /db
          ports:
          - containerPort: 8001
            protocol: TCP
