webdis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdis
  labels:
    app: webdis
    name: webdis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdis
      name: webdis
  template:
    metadata:
      name: webdis
      labels:
        app: webdis
        name: webdis
    spec:
      containers:
      - command: ["/usr/local/bin/webdis","/config/webdis.json"]
        name: webdis
        image: nicolas/webdis:latest
        ports:
        - containerPort: 7379
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
        - name: config
          configMap:
            name: webdis
            items:
            - key: webdis.json
              path: webdis.json
---
apiVersion: v1
kind: Service
metadata:
  name: webdis
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 7379
  selector:
    name: webdis
  type: ClusterIP
